# node-ppocr

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  example-multithread.js  example.js  index.js  package.json  paddle_cmake.patch  paddleocr.cc  ppocr.cc  test_load.js
includes/opencv2/: opencv_modules.hpp
includes/paddle/: ocr_rec.cpp  ocr_rec.h
lib/: opencv_core452.lib  opencv_imgproc452.lib  paddle_inference.lib
src/: ocr_cls.cpp  ocr_cls.h  ocr_det.cpp  ocr_det.h  ocr_rec.cpp  ocr_rec.h  preprocess_op.cpp  utility.cpp
